src/test/ui/parser/recover-assoc-const-constraint.stderr
error[E0658]: associated const equality is incomplete
  --> $DIR/recover-assoc-const-constraint.rs:3:11
   |
LL |     bar::<Item = 42>();
   |           ^^^^^^^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error[E0658]: associated const equality is incomplete
  --> $DIR/recover-assoc-const-constraint.rs:5:11
   |
LL |     bar::<Item = { 42 }>();
   |           ^^^^^^^^^^^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
